--- a/css/about.css
+++ b/css/about.css
@@ -71,78 +71,9 @@ p {
     margin: 0 auto;
 }
 
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
+/* General styling */
 
-.top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
 
-.middle-content {
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
-}
-
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
-}
-
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
-
-footer {
-    width: 100%;
-    background: black;
-}
-
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
-
-footer nav a {
-    color: white;
-    text-decoration: none;
-}
 
 /* Nav Bar Styling */
 
@@ -180,43 +111,10 @@ nav a {
 /* image styling */
 
 .main-image {
-    background-image: url("file:///Users/aldenho/Desktop/LambdaSchoolProjects/web-Sprint-Challenge-User-Interface-and-Git/img/jumbo.jpg");
+    background-image: url("/Users/aldenho/Desktop/LambdaSchoolProjects/web-Sprint-Challenge-User-Interface-and-Git/img/jumbo-about.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 20vh;
     margin-bottom: 4%;
     background-position-x: 50%;
-}
-
-/* box styling */
-
-.box1 {
-    background: teal;
-}
-.box2 {
-    background: gold;
-}
-.box3 {
-    background: cadetblue;
-}
-.box4 {
-    background: coral;
-}
-.box5 {
-    background: crimson;
-}
-.box6 {
-    background: forestgreen;
-}
-.box7 {
-    background: darkorchid;
-}
-.box8 {
-    background: hotpink;
-}
-.box9 {
-    background: indigo;
-}
-.box10 {
-    background: dodgerblue;
 }
