--- a/css/about.css
+++ b/css/about.css
@@ -172,7 +172,7 @@ nav a {
 
 footer {
     background: black;
-    height: 8vh;
+    height: 7vh;
 }
 
 footer nav {
@@ -181,12 +181,12 @@ footer nav {
 }
 
 footer nav div {
-    margin-top: 4%;
+    margin-top: 3%;
     margin-right: 3%;
     width: 10%;
 
 }
 
 footer a {
-    color: #c2c2c2;
+    color: #dbdbdb;
 }
